--- a/CSS/style.css
+++ b/CSS/style.css
@@ -31,7 +31,7 @@ header{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: solid 5px rgb(29, 28, 28);
+    border: solid 1vw rgb(29, 28, 28);
     margin: 3vh;
     background-color: aliceblue;
     
@@ -74,10 +74,12 @@ margin-top: 2em;
 
     font-style: italic;
     list-style-type: none; /* Remove os marcadores padrão da lista */
+    text-align: justify;
+    hyphens: auto;
   }
   
 .li-topic::before {
     
-    content: "• "; /* Define o conteúdo antes de cada item da lista (o marcador) */
+    content: "•"; /* Define o conteúdo antes de cada item da lista (o marcador) */
   }
   
