--- a/CSS/style.css
+++ b/CSS/style.css
@@ -31,7 +31,7 @@ header{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: solid 1vw rgb(29, 28, 28);
+    border: solid 2.5px rgb(29, 28, 28);
     margin: 3vh;
     background-color: aliceblue;
     
